tests/ui/parser/bad-fn-ptr-qualifier.stderr
error: an `fn` pointer type cannot be `const`
  --> $DIR/bad-fn-ptr-qualifier.rs:6:15
   |
LL | pub type T0 = const fn();
   |               ^^^^^ `const` because of this
   |
   = note: allowed qualifiers are: `unsafe` and `extern`
help: remove the `const` qualifier
   |
LL - pub type T0 = const fn();
LL + pub type T0 = fn();
   |

error: an `fn` pointer type cannot be `const`
  --> $DIR/bad-fn-ptr-qualifier.rs:7:15
   |
LL | pub type T1 = const extern "C" fn();
   |               ^^^^^ `const` because of this
   |
   = note: allowed qualifiers are: `unsafe` and `extern`
help: remove the `const` qualifier
   |
LL - pub type T1 = const extern "C" fn();
LL + pub type T1 = extern "C" fn();
   |

error: an `fn` pointer type cannot be `const`
  --> $DIR/bad-fn-ptr-qualifier.rs:8:15
   |
LL | pub type T2 = const unsafe extern "C" fn();
   |               ^^^^^ `const` because of this
   |
   = note: allowed qualifiers are: `unsafe` and `extern`
help: remove the `const` qualifier
   |
LL - pub type T2 = const unsafe extern "C" fn();
LL + pub type T2 = unsafe extern "C" fn();
   |

error: an `fn` pointer type cannot be `async`
  --> $DIR/bad-fn-ptr-qualifier.rs:9:15
   |
LL | pub type T3 = async fn();
   |               ^^^^^ `async` because of this
   |
   = note: allowed qualifiers are: `unsafe` and `extern`
help: remove the `async` qualifier
   |
LL - pub type T3 = async fn();
LL + pub type T3 = fn();
   |

error: an `fn` pointer type cannot be `async`
  --> $DIR/bad-fn-ptr-qualifier.rs:10:15
   |
LL | pub type T4 = async extern "C" fn();
   |               ^^^^^ `async` because of this
   |
   = note: allowed qualifiers are: `unsafe` and `extern`
help: remove the `async` qualifier
   |
LL - pub type T4 = async extern "C" fn();
LL + pub type T4 = extern "C" fn();
   |

error: an `fn` pointer type cannot be `async`
  --> $DIR/bad-fn-ptr-qualifier.rs:11:15
   |
LL | pub type T5 = async unsafe extern "C" fn();
   |               ^^^^^ `async` because of this
   |
   = note: allowed qualifiers are: `unsafe` and `extern`
help: remove the `async` qualifier
   |
LL - pub type T5 = async unsafe extern "C" fn();
LL + pub type T5 = unsafe extern "C" fn();
   |

error: an `fn` pointer type cannot be `gen`
  --> $DIR/bad-fn-ptr-qualifier.rs:12:15
   |
LL | pub type T6 = gen fn();
   |               ^^^ `gen` because of this
   |
   = note: allowed qualifiers are: `unsafe` and `extern`
help: remove the `gen` qualifier
   |
LL - pub type T6 = gen fn();
LL + pub type T6 = fn();
   |

error: an `fn` pointer type cannot be `gen`
  --> $DIR/bad-fn-ptr-qualifier.rs:13:15
   |
LL | pub type T7 = gen extern "C" fn();
   |               ^^^ `gen` because of this
   |
   = note: allowed qualifiers are: `unsafe` and `extern`
help: remove the `gen` qualifier
   |
LL - pub type T7 = gen extern "C" fn();
LL + pub type T7 = extern "C" fn();
   |

error: an `fn` pointer type cannot be `gen`
  --> $DIR/bad-fn-ptr-qualifier.rs:14:15
   |
LL | pub type T8 = gen unsafe extern "C" fn();
   |               ^^^ `gen` because of this
   |
   = note: allowed qualifiers are: `unsafe` and `extern`
help: remove the `gen` qualifier
   |
LL - pub type T8 = gen unsafe extern "C" fn();
LL + pub type T8 = unsafe extern "C" fn();
   |

error: an `fn` pointer type cannot be `const`
  --> $DIR/bad-fn-ptr-qualifier.rs:15:15
   |
LL | pub type T9 = const async unsafe extern "C" fn();
   |               ^^^^^ `const` because of this
   |
   = note: allowed qualifiers are: `unsafe` and `extern`
help: remove the `const` qualifier
   |
LL - pub type T9 = const async unsafe extern "C" fn();
LL + pub type T9 = async unsafe extern "C" fn();
   |

error: an `fn` pointer type cannot be `async`
  --> $DIR/bad-fn-ptr-qualifier.rs:15:21
   |
LL | pub type T9 = const async unsafe extern "C" fn();
   |                     ^^^^^ `async` because of this
   |
   = note: allowed qualifiers are: `unsafe` and `extern`
help: remove the `async` qualifier
   |
LL - pub type T9 = const async unsafe extern "C" fn();
LL + pub type T9 = const unsafe extern "C" fn();
   |

error: an `fn` pointer type cannot be `const`
  --> $DIR/bad-fn-ptr-qualifier.rs:19:25
   |
LL | pub type FTT0 = for<'a> const fn();
   |                         ^^^^^ `const` because of this
   |
   = note: allowed qualifiers are: `unsafe` and `extern`
help: remove the `const` qualifier
   |
LL - pub type FTT0 = for<'a> const fn();
LL + pub type FTT0 = for<'a> fn();
   |

error: an `fn` pointer type cannot be `const`
  --> $DIR/bad-fn-ptr-qualifier.rs:20:25
   |
LL | pub type FTT1 = for<'a> const extern "C" fn();
   |                         ^^^^^ `const` because of this
   |
   = note: allowed qualifiers are: `unsafe` and `extern`
help: remove the `const` qualifier
   |
LL - pub type FTT1 = for<'a> const extern "C" fn();
LL + pub type FTT1 = for<'a> extern "C" fn();
   |

error: an `fn` pointer type cannot be `const`
  --> $DIR/bad-fn-ptr-qualifier.rs:21:25
   |
LL | pub type FTT2 = for<'a> const unsafe extern "C" fn();
   |                         ^^^^^ `const` because of this
   |
   = note: allowed qualifiers are: `unsafe` and `extern`
help: remove the `const` qualifier
   |
LL - pub type FTT2 = for<'a> const unsafe extern "C" fn();
LL + pub type FTT2 = for<'a> unsafe extern "C" fn();
   |

error: an `fn` pointer type cannot be `async`
  --> $DIR/bad-fn-ptr-qualifier.rs:22:25
   |
LL | pub type FTT3 = for<'a> async fn();
   |                         ^^^^^ `async` because of this
   |
   = note: allowed qualifiers are: `unsafe` and `extern`
help: remove the `async` qualifier
   |
LL - pub type FTT3 = for<'a> async fn();
LL + pub type FTT3 = for<'a> fn();
   |

error: an `fn` pointer type cannot be `async`
  --> $DIR/bad-fn-ptr-qualifier.rs:23:25
   |
LL | pub type FTT4 = for<'a> async extern "C" fn();
   |                         ^^^^^ `async` because of this
   |
   = note: allowed qualifiers are: `unsafe` and `extern`
help: remove the `async` qualifier
   |
LL - pub type FTT4 = for<'a> async extern "C" fn();
LL + pub type FTT4 = for<'a> extern "C" fn();
   |

error: an `fn` pointer type cannot be `async`
  --> $DIR/bad-fn-ptr-qualifier.rs:24:25
   |
LL | pub type FTT5 = for<'a> async unsafe extern "C" fn();
   |                         ^^^^^ `async` because of this
   |
   = note: allowed qualifiers are: `unsafe` and `extern`
help: remove the `async` qualifier
   |
LL - pub type FTT5 = for<'a> async unsafe extern "C" fn();
LL + pub type FTT5 = for<'a> unsafe extern "C" fn();
   |

error: an `fn` pointer type cannot be `gen`
  --> $DIR/bad-fn-ptr-qualifier.rs:26:25
   |
LL | pub type FTT6 = for<'a> gen fn();
   |                         ^^^ `gen` because of this
   |
   = note: allowed qualifiers are: `unsafe` and `extern`
help: remove the `gen` qualifier
   |
LL - pub type FTT6 = for<'a> gen fn();
LL + pub type FTT6 = for<'a> fn();
   |

error: an `fn` pointer type cannot be `gen`
  --> $DIR/bad-fn-ptr-qualifier.rs:27:25
   |
LL | pub type FTT7 = for<'a> gen extern "C" fn();
   |                         ^^^ `gen` because of this
   |
   = note: allowed qualifiers are: `unsafe` and `extern`
help: remove the `gen` qualifier
   |
LL - pub type FTT7 = for<'a> gen extern "C" fn();
LL + pub type FTT7 = for<'a> extern "C" fn();
   |

error: an `fn` pointer type cannot be `gen`
  --> $DIR/bad-fn-ptr-qualifier.rs:28:25
   |
LL | pub type FTT8 = for<'a> gen unsafe extern "C" fn();
   |                         ^^^ `gen` because of this
   |
   = note: allowed qualifiers are: `unsafe` and `extern`
help: remove the `gen` qualifier
   |
LL - pub type FTT8 = for<'a> gen unsafe extern "C" fn();
LL + pub type FTT8 = for<'a> unsafe extern "C" fn();
   |

error: an `fn` pointer type cannot be `const`
  --> $DIR/bad-fn-ptr-qualifier.rs:30:25
   |
LL | pub type FTT9 = for<'a> const async unsafe extern "C" fn();
   |                         ^^^^^ `const` because of this
   |
   = note: allowed qualifiers are: `unsafe` and `extern`
help: remove the `const` qualifier
   |
LL - pub type FTT9 = for<'a> const async unsafe extern "C" fn();
LL + pub type FTT9 = for<'a> async unsafe extern "C" fn();
   |

error: an `fn` pointer type cannot be `async`
  --> $DIR/bad-fn-ptr-qualifier.rs:30:31
   |
LL | pub type FTT9 = for<'a> const async unsafe extern "C" fn();
   |                               ^^^^^ `async` because of this
   |
   = note: allowed qualifiers are: `unsafe` and `extern`
help: remove the `async` qualifier
   |
LL - pub type FTT9 = for<'a> const async unsafe extern "C" fn();
LL + pub type FTT9 = for<'a> const unsafe extern "C" fn();
   |

error: an `fn` pointer type cannot be `const`
  --> $DIR/bad-fn-ptr-qualifier.rs:35:22
   |
LL | pub type W1 = unsafe const fn();
   |                      ^^^^^ `const` because of this
   |
   = note: allowed qualifiers are: `unsafe` and `extern`
help: remove the `const` qualifier
   |
LL - pub type W1 = unsafe const fn();
LL + pub type W1 = unsafe fn();
   |

error: an `fn` pointer type cannot be `async`
  --> $DIR/bad-fn-ptr-qualifier.rs:37:22
   |
LL | pub type W2 = unsafe async fn();
   |                      ^^^^^ `async` because of this
   |
   = note: allowed qualifiers are: `unsafe` and `extern`
help: remove the `async` qualifier
   |
LL - pub type W2 = unsafe async fn();
LL + pub type W2 = unsafe fn();
   |

error: an `fn` pointer type cannot be `gen`
  --> $DIR/bad-fn-ptr-qualifier.rs:39:22
   |
LL | pub type W3 = unsafe gen fn();
   |                      ^^^ `gen` because of this
   |
   = note: allowed qualifiers are: `unsafe` and `extern`
help: remove the `gen` qualifier
   |
LL - pub type W3 = unsafe gen fn();
LL + pub type W3 = unsafe fn();
   |

error: an `fn` pointer type cannot be `const`
  --> $DIR/bad-fn-ptr-qualifier.rs:41:30
   |
LL | pub type W4 = for<'a> unsafe const fn();
   |                              ^^^^^ `const` because of this
   |
   = note: allowed qualifiers are: `unsafe` and `extern`
help: remove the `const` qualifier
   |
LL - pub type W4 = for<'a> unsafe const fn();
LL + pub type W4 = for<'a> unsafe fn();
   |

error: aborting due to 26 previous errors

